# cross-chain-resolver-example

./: .eslintrc.json  .gitignore  .last-order-hash  README.md  README_DEPLOY.md  eslint.config.mjs  foundry.toml  implementation-plan.md  intent.json  intent2.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remappings.txt  requirements.md  tsconfig.json
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
contracts/script/: DeployEscrowFactory.s.sol  DeployLimitOrderProtocol.s.sol  DeployResolver.s.sol
contracts/src/: Resolver.sol  TestEscrowFactory.sol
docs/: protocol-spec.md  threat-model.md
near/contracts/escrow/: Cargo.toml  README.md
near/contracts/escrow/.cargo/: config.toml
near/contracts/escrow/src/: lib.rs
near/contracts/ft-mock/: Cargo.toml
near/contracts/ft-mock/src/: lib.rs
near/contracts/intents/: Cargo.toml
near/contracts/intents/src/: lib.rs
scripts/: agent.ts  compile-near-escrow.ts  create-escrow-from-last-order.ts  deploy-factory-sepolia.ts  deploy-lop-sepolia.ts  deploy-near-escrow.ts  deploy-near-intents.ts  deploy-resolver-sepolia.ts  emit-evm-dst-escrow.ts  encode-constructor-args.ts  init-near-escrow.ts  inspect-factory.ts  lock-ft-into-escrow.ts  print-meta-order.ts  read-resolver-owner.ts  run-all-e2e-tests.ts  run-bidirectional-e2e.ts  submit-intent.ts  trigger-dst-escrow.ts  trigger-factory-dst-escrow.ts  verify-etherscan.ts  verify-factory-sepolia.ts  verify-resolver-sepolia.ts  view-escrow-by-order.ts  view-near-escrow.ts
scripts/schemas/: near-intent.ts
tests/: config.ts  main.spec.ts
(+31 files in other folders)
