[package]
name = "near-htlc-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "near_htlc_escrow"

[dependencies]
near-sdk = { version = "5" }
near-contract-standards = { version = "5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-keccak = { version = "2", default-features = false, features = ["keccak"] }
hex = "0.4"
borsh = { version = "1", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
