[package]
name = "near-ft-mock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "near_ft_mock"

[dependencies]
near-sdk = { version = "5", default-features = false, features = ["unit-testing"] }
near-contract-standards = { version = "5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
strip = true

[profile.dev]
panic = "abort"}
