[package]
name = "near-intents"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.17.2" }
borsh = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
